--- a/SpectatorFootball/MainMenuUC.xaml
+++ b/SpectatorFootball/MainMenuUC.xaml
@@ -13,7 +13,7 @@
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
                 <Button Name="mmNew" Style="{StaticResource appMainMenubtnStyle}" Click="mmNew_Click">New League</Button>
                 <Label Height="20"></Label>
-                <Button Name="mmLoad" Style="{StaticResource appMainMenubtnStyle}">Load League</Button>
+                <Button Name="mmLoad" Style="{StaticResource appMainMenubtnStyle}" Click="mmLoad_Click">Load League</Button>
                 <Label Height="20"></Label>
                 <Button Name="mmAdmin" Style="{StaticResource appMainMenubtnStyle}" Click="mmAdmin_Click">Administration</Button>
                 <Label Height="20"></Label>
