--- a/SpectatorFootball/WindowsLeague/LeagueStandings.xaml
+++ b/SpectatorFootball/WindowsLeague/LeagueStandings.xaml
@@ -16,7 +16,7 @@
             <Image Grid.Column="1" Name="League_image" Width="120" Height="60"></Image>
 <!--            <Button Grid.Column="2" Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button> -->
         </Grid>
-        <StackPanel Name="sp1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="top" >
+        <StackPanel Name="sp1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="top" >
         </StackPanel>
 
     </DockPanel>
